--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.10.1",
+    "graphql": "^16.6.0",
     "typescript": "^4.7.4"
   }
 }
