--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "build": "tsc --project ./"
-
+    "build": "tsc --project ./"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,7 @@
   "dependencies": {
     "apollo-server": "^3.10.1",
     "graphql": "^16.6.0",
+    "request": "^2.88.2",
     "typescript": "^4.7.4"
   }
 }
