--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --project ./"
+    "build": "tsc --project ./",
+    "start": "node ./dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.10.1",
+    "dotenv": "^16.0.1",
     "graphql": "^16.6.0",
     "request": "^2.88.2",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/request": "^2.48.8"
   }
 }
