--- a/server/package.json
+++ b/server/package.json
@@ -6,19 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --project ./",
-    "start": "node ./dist/server.js"
+    "start": "npm run build && node ./dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.10.1",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "graphql": "^16.6.0",
-    "request": "^2.88.2",
     "typescript": "^4.7.4"
-  },
-  "devDependencies": {
-    "@types/request": "^2.48.8"
   }
 }
