--- a/newsClient/package.json
+++ b/newsClient/package.json
@@ -14,6 +14,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
