--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "graphql": "^16.6.0",
-    "iconv": "^3.0.1",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/iconv": "^3.0.1"
   }
 }
